// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<section
  className="expense-list"
>
  <div
    className="expense-list__topbar"
  >
    <p
      className="topbar__item-name"
    >
      Expense
    </p>
    <p
      className="topbar__item-name"
    >
      Amount
    </p>
  </div>
  <h3
    className="expense-list__no-expenses"
  >
    You currently have no expenses!
  </h3>
</section>
`;

exports[`Should render expense list with expenses 1`] = `
<section
  className="expense-list"
>
  <div
    className="expense-list__topbar"
  >
    <p
      className="topbar__item-name"
    >
      Expense
    </p>
    <p
      className="topbar__item-name"
    >
      Amount
    </p>
  </div>
  <ExpenseListItem
    amount={2555}
    createdAt={0}
    description="Ice cream"
    id="1"
    key="1"
    note=""
  />
  <ExpenseListItem
    amount={3255}
    createdAt={-345600000}
    description="Diner"
    id="2"
    key="2"
    note=""
  />
  <ExpenseListItem
    amount={5500000}
    createdAt={345600000}
    description="Vacation"
    id="3"
    key="3"
    note=""
  />
</section>
`;
